Use \token in btls13 for every named object

--- a/spec13/053Phases.tex
+++ b/spec13/053Phases.tex
@@ -102,8 +102,8 @@
 Handshake и может переходить к отправке данных прикладных протоколов
 (``\code{Application Data}'' на рисунке). Для ускорения работы сервер может
 отправлять прикладные данные, даже не получив встречного
-сообщения~\token{Finished} от клиента. При планировании использования TLS в
-прикладных протоколах следует учитывать, что в момент отправки сервер
+сообщения~\token[HS.F]{Finished} от клиента. При планировании использования TLS 
+в прикладных протоколах следует учитывать, что в момент отправки сервер
 взаимодействует с еще неаутентифицированным клиентом.
 
 Еще одним способом ускорения TLS является отправка клиентом прикладных данных до
