--- a/spec13/054Retry.tex
+++ b/spec13/054Retry.tex
@@ -25,7 +25,7 @@
 повторном~\token[HS.CH]{ClientHello}.
 
 При перезапуске Handshake может выполняться другие корректировки
-\token{ClientHello} (см.~\ref{HS.CH}).
+\token[HS.CH]{ClientHello} (см.~\ref{HS.CH}).
 
 При перезапуске первое сообщение~\token[HS.CH]{ClientHello} и
 ответное~\token[HS.HRR]{HelloRetryRequest} остаются в стенограмме Handshake.
