--- a/spec13/095Upd.tex
+++ b/spec13/095Upd.tex
@@ -22,6 +22,6 @@
 \end{align*}
 
 Перед обновлением ключей сторона-инициатор должна отправить противоположной 
-стороне сообщение \token{KeyUpdate} (см.~\ref{HS.KU}).
+стороне сообщение \token[HS.KU]{KeyUpdate} (см.~\ref{HS.KU}).
 
 После обновления следует удалить предыдущие ключи.
