Hide links in btls13/hyperref

--- a/spec13/btls.tex
+++ b/spec13/btls.tex
@@ -12,11 +12,10 @@
 \usepackage[
   pdftitle={The Transport Layer Security Protocol (TLS) Version 1.3},
   pdfauthor={},
+  hidelinks=true,
   bookmarks=true,
   pdfpagemode=UseOutlines,
-  pdfstartview=FitH,
-  linkcolor=black,
-  citecolor=black]{hyperref}
+  pdfstartview=FitH]{hyperref}
 
 \usepackage{ulem}
 \normalem
