Clarify the use of cookie

--- a/spec13/063Ext.tex
+++ b/spec13/063Ext.tex
@@ -325,8 +325,8 @@ Handshake с оповещением \token[ALERT.Err.ip]{illegal_parameter}.
 
 Куки (cookie)~--- это данные, которые сервер отправляет клиенту на хранение. 
 %
-В куки сервер передает клиенту состояние, избегая необходимости хранить 
-его самостоятельно.
+В куки сервер передает клиенту состояние, избегая необходимости хранить его 
+самостоятельно.
 %
 Кроме этого, сервер может проверить достижимость сетевого адреса клиента 
 (защита от атак <<отказ в обслуживании>>), предлагая тому возвратить присланные 
@@ -350,8 +350,8 @@ struct {
 клиент должен перенести расширение в повторное сообщение 
 \token[HS.CH]{ClientHello}.
 %
-Клиент не должен включать расширение в первое сообщение 
-\token[HS.CH]{ClientHello} в последующих соединениях с сервером.
+Клиент не должен включать расширение в первое \token[HS.CH]{ClientHello} в 
+последующих соединениях с сервером.
 
 \begin{note}
 Отправка \token{cookie} в \token[HS.HRR]{HelloRetryRequest} является исключением 
@@ -360,22 +360,29 @@ struct {
 (см.~\ref{HS.Ext.List}).
 \end{note}
 
-Сервер может указать в \token{cookie} хэш-значение первого сообщения
-\token[HS.CH]{ClientHello}. Получив повторное \token[HS.CH]{ClientHello},
-сервер реконструирует первое, вычисляет его хэш-значение и сравнивает с 
-хэш-значением, указанным в \token{cookie}. При такой схеме взаимодействия 
-серверу не нужно поддерживать состояние соединения с клиентом и хранить в нем 
-первое \token[HS.CH]{ClientHello}.
-
-% info: https://mailarchive.ietf.org/arch/msg/tls/7rLQEHrqKaYo7u31iNBNsPI_OVg/
+Сервер может указать в \token{cookie} защищенное хэш-значение первого 
+сообщения \token[HS.CH]{ClientHello}. Получив повторное 
+\token[HS.CH]{ClientHello}, сервер снимает защиту, определяет хэш-значение и   
+использует его при обработке стенограммы Handshake (см.~\ref{CRYPTO.Transcr}).
+%
+При такой схеме взаимодействия серверу не нужно хранить первое 
+\token[HS.CH]{ClientHello}. 
 
 \begin{note}
-Если сервер не хранит состояние, то он не может отличить 
-первое сообщение \token[HS.CH]{ClientHello} от повторного. Между этими 
-сообщениями сервер может получить незащищенную запись типа 
-\code{change_cipher_spec}. Сервер без состояния должен игнорировать эту запись 
-(см.~\ref{RECORD.Rec}).
+\doubt{При определенных условиях сервер может реконструировать первое 
+\token[HS.CH]{ClientHello} по повторному, а затем проверить, что 
+хэш-значение реконструированного сообщения совпадает с присланным 
+в~\token{cookie}.}
 \end{note}
+
+% info: https://mailarchive.ietf.org/arch/msg/tls/7rLQEHrqKaYo7u31iNBNsPI_OVg/
+% info: https://mailarchive.ietf.org/arch/msg/tls/uOQBbe28_cIhQTmLgyPyPqtUvqk/
+% info: https://mailarchive.ietf.org/arch/msg/tls/dPKZI5RXdAAb6mH8PhuOWnw1-1o/
+
+Если сервер работает без состояния, то он не может отличить первое сообщение 
+\token[HS.CH]{ClientHello} от повторного. Между этими сообщениями сервер может 
+получить незащищенную запись типа \code{change_cipher_spec}. Сервер без 
+состояния должен игнорировать эту запись (см.~\ref{RECORD.Rec}).
 
 \subsection{Расширения \token{signature_algorithms} и 
 \token{signature_algorithms_cert}}\label{HS.Ext.sa} 
